# vocab

backend/: backend.Dockerfile  pyproject.toml  startup_script.sh
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/management/commands/: populate_omw_words.py
backend/api/migrations/: 0001_initial.py
backend/language_app/: settings.py
docker/: docker-compose.yml
